--- a/Index.html
+++ b/Index.html
@@ -91,11 +91,11 @@
         <div id="maininbox">
             <div id="box" style="z-index: 15;">
                 <p id="t1" style="font-size: 25px;color: #f97070;">
-                    Caution !!! 
+                    Hello !!! <img src="Images/icons8-waving-hand-emoji-48.png" alt="" style="margin-left: 10px;">
                 </p>
                 <p id="t2" style="margin-top: 45px;">
-                    We developed this site as user-friendship manner, not to copy by anyone.Because, we use this site for our all official usages.
-                    Another source-code of our projects provide you by <a href="https://t.me/+NfpLAwDdDcBkOWE1" target="_blank">OUR DINNA TELEGRAM GROUP</a>
+                    DINNAteam provides you source code of this site as open-source team.If you copy another developer's code or learn about coding with using free resources, You can get now. 
+                   <a href="https://github.com/DINNAlk/DINNAteam.git" target="_blank">Source Code Of This Sites</a>
                 </p>
                 <button id="btn1">
                     Next
