Edited the any thing on home.html

--- a/Home.html
+++ b/Home.html
@@ -148,7 +148,8 @@
         #vid{
             width: 50%;
             min-height: 100vh;
-            
+            color: #c0c0c0;
+            font-family: 'Fredoka';
             float: left;
 
         }
@@ -396,7 +397,7 @@
         background-position-x: right;
         cursor: pointer;
     }
-
+  
     /*animation*/
         @keyframes ttt{
             0%{
@@ -645,6 +646,7 @@
 
             <div id="comments" style="margin-top: 15px;">
             </div>
+            <caption>^ Comments</caption>
         </div>
 
         <div id="detailed">
@@ -708,8 +710,11 @@
         <p id="dddd" style="color:blue;text-decoration: underline;font-family: 'Fredoka';cursor: pointer;user-select: none;font-size: 20px;">
             #proudtobelk
         </p>
-        <p id="dddd" style="color:#f11515;margin-top:20px;font-family: 'Fredoka';cursor: pointer;font-size: 30px; " >
+        <p id="dddd" style="color:#f11515;margin-top:20px;font-family: 'Fredoka';cursor: pointer;font-size: 30px;font-weight: bolder; " >
             "DINNA, who comfirmed the blue pride of the SIYANE NAYAKE in the friendly world, come to see him and this infinite information sea."
+        </p>
+        <p id="dddd" style="color:#f11515;margin-top:20px;font-family: 'Fredoka';cursor: pointer;font-size: 30px; " >
+            <a href="https://www.instagram.com/dinna_piu/" target="_blank" style="margin-left:5px ;"><img src="Images/icons8-instagram-48.png" alt=""></a><a href="https://www.facebook.com/dinusha.bamunuarachchi" target="_blank" style="margin-left:5px ;"><img src="Images/icons8-facebook-circled-48.png" alt=""></a>
         </p>
     </div>
     <footer>
